--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,14 @@
         <activity android:name=".CalorieIntake">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.getfit.MainActivity">
-            </meta-data>
+                android:value="com.epicodus.getfit.MainActivity"></meta-data>
         </activity>
         <activity android:name=".ExerciseProgram">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.getfit.CalorieIntake">
-            </meta-data>
+                android:value="com.epicodus.getfit.CalorieIntake"></meta-data>
         </activity>
+        <activity android:name=".Nutrition"></activity>
     </application>
 
 </manifest>
