--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.epicodus.getfit">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,14 +21,14 @@
         <activity android:name=".CalorieIntake">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.getfit.MainActivity"></meta-data>
+                android:value="com.epicodus.getfit.MainActivity" />
         </activity>
         <activity android:name=".ExerciseProgram">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.getfit.CalorieIntake"></meta-data>
+                android:value="com.epicodus.getfit.CalorieIntake" />
         </activity>
-        <activity android:name=".Nutrition"></activity>
+        <activity android:name=".Nutrition" />
     </application>
 
 </manifest>
