--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.epicodus.getfit"
         minSdkVersion 15
@@ -10,6 +11,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        repositories {
+            mavenCentral()
+            jcenter()
+        }
 
         buildTypes {
             release {
@@ -32,6 +38,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    androidTestCompile('com.android.support.test:runner:0.3') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -40,4 +50,6 @@ dependencies {
     compile 'se.akerfeldt:okhttp-signpost:1.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:+'
+    testCompile 'org.robolectric:robolectric:3.0'
+    testCompile 'org.robolectric:shadows-support-v4:3.0'
 }
