--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,5 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-#YummlyAppId:"";
-YummlyAppKey:"69eC3ViUqZieG7ZZvGr6l30KSEbvAgQsHh2x7y98";
+YummlyAppId:"66d2f9f6";
+YummlyAppKey:"c840a23597c8744e8dd1951c8c2faa30";
