--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'org.robolectric:shadows-support-v4:3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
