--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,20 @@ android {
             jcenter()
         }
 
+        packagingOptions {
+            exclude 'META-INF/DEPENDENCIES.txt'
+            exclude 'META-INF/DEPENDENCIES'
+            exclude 'META-INF/dependencies.txt'
+            exclude 'META-INF/LICENSE.txt'
+            exclude 'META-INF/LICENSE'
+            exclude 'META-INF/license.txt'
+            exclude 'META-INF/LGPL2.1'
+            exclude 'META-INF/NOTICE.txt'
+            exclude 'META-INF/NOTICE'
+            exclude 'META-INF/notice.txt'
+        }
+//
+
         buildTypes {
             release {
                 minifyEnabled false
@@ -31,6 +45,7 @@ android {
     }
 }
 
+//apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -56,4 +71,7 @@ dependencies {
     testCompile 'org.robolectric:shadows-support-v4:3.0'
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
+    compile 'com.google.firebase:firebase-database:9.2.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
