--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         </activity>
         <activity android:name=".NutritionListActivity" />
         <activity android:name=".NutritionDetailActivity" />
-        <activity android:name=".SaveFoodListActivity"></activity>
+        <activity android:name=".SaveFoodListActivity" />
+        <activity android:name=".CreateAccountActivity" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
